干了一天了，提交一下code

--- a/src/zh/posts/JVM/2.md
+++ b/src/zh/posts/JVM/2.md
@@ -1,6 +1,6 @@
 ---
 icon: pen-to-square
-date: 2022-01-05
+date: 2022-01-06
 category:
   - 香蕉
   - 水果
@@ -8,9 +8,14 @@ tag:
   - 黄
   - 弯曲的
   - 长
+star: 10
 ---
 
-# 香蕉 1
+# JVM组成
+
+一个被数字 `10` 星标了的香蕉文章。
+
+<!-- more -->
 
 ## 标题 2
 
