--- a/src/zh/posts/JVM/4.md
+++ b/src/zh/posts/JVM/4.md
@@ -1,15 +1,15 @@
 ---
 icon: pen-to-square
-date: 2022-01-10
+date: 2022-01-08
 category:
-  - 火龙果
-  - 水果
+  - 香蕉
 tag:
-  - 红
-  - 大
+  - 黄
+  - 弯曲的
+  - 长
 ---
 
-# 火龙果
+# 垃圾回收
 
 ## 标题 2
 
