--- a/src/zh/posts/Spring知识/2.md
+++ b/src/zh/posts/Spring知识/2.md
@@ -1,15 +1,20 @@
 ---
 icon: pen-to-square
-date: 2022-01-09
+date: 2022-01-02
 category:
-  - 樱桃
+  - Spring知识
 tag:
   - 红
-  - 小
+  - 大
   - 圆
+star: true
 ---
 
-# 樱桃
+# 反射
+
+一个被星标了的苹果文章。
+
+<!-- more -->
 
 ## 标题 2
 
