--- a/src/zh/posts/Spring知识/3.md
+++ b/src/zh/posts/Spring知识/3.md
@@ -1,17 +1,15 @@
 ---
-cover: /assets/images/cover2.jpg
 icon: pen-to-square
-date: 2022-01-12
+date: 2022-01-03
 category:
-  - 蔬菜
+  - Spring知识
 tag:
   - 红
+  - 大
   - 圆
-star: true
-sticky: true
 ---
 
-# 番茄
+# IOC
 
 ## 标题 2
 
