--- a/src/zh/posts/java基础知识/1.md
+++ b/src/zh/posts/java基础知识/1.md
@@ -1,16 +1,15 @@
 ---
 icon: pen-to-square
-date: 2022-01-04
+date: 2022-01-01
 category:
-  - 苹果
-  - 水果
+  - java基础知识
 tag:
   - 红
   - 大
   - 圆
 ---
 
-# 苹果 4
+# java 集合
 
 ## 标题 2
 
@@ -18,4 +17,4 @@ tag:
 
 ### 标题 3
 
-这里是内容。
+java的集合也成为容器。
