--- a/src/zh/posts/Spring知识/4.md
+++ b/src/zh/posts/Spring知识/4.md
@@ -1,8 +1,8 @@
 ---
 icon: pen-to-square
-date: 2022-01-03
+date: 2022-01-04
 category:
-  - 苹果
+  - Spring知识
   - 水果
 tag:
   - 红
@@ -10,7 +10,7 @@ tag:
   - 圆
 ---
 
-# 苹果 3
+# Bean
 
 ## 标题 2
 
