--- a/src/zh/posts/java基础知识/2.md
+++ b/src/zh/posts/java基础知识/2.md
@@ -2,14 +2,14 @@
 icon: pen-to-square
 date: 2022-01-01
 category:
-  - 苹果
+  - java面试题
 tag:
   - 红
   - 大
   - 圆
 ---
 
-# 苹果 1
+# 面试题
 
 ## 标题 2
 
@@ -17,4 +17,4 @@ tag:
 
 ### 标题 3
 
-这里是内容。
+java的集合也成为容器。
