--- a/src/zh/posts/java基础知识/1.md
+++ b/src/zh/posts/java基础知识/1.md
@@ -1,12 +1,12 @@
 ---
 icon: pen-to-square
 date: 2022-01-01
+copy: false #打开复制权限
 category:
   - java基础知识
 tag:
-  - 红
-  - 大
-  - 圆
+  - 集合
+
 ---
 
 # java 集合
