--- a/src/zh/posts/面试求职/JVM/5.md
+++ b/src/zh/posts/面试求职/JVM/5.md
@@ -1,13 +1,13 @@
 ---
 # cover: /assets/images/cover2.jpg
 icon: pen-to-square
-date: 2024-01-12
+date: 2023-01-12
 category:
   - jvm
 tag:
   - 进程/线程
   - 程序计数器
-star: true
+star: false
 sticky: true
 ---
 
