--- a/src/zh/posts/面试求职/JVM/1.md
+++ b/src/zh/posts/面试求职/JVM/1.md
@@ -3,20 +3,17 @@ icon: pen-to-square
 date: 2022-01-05
 comment: true
 category:
-  - 香蕉
-  - 水果
+  - JVM
 tag:
-  - 黄
-  - 弯曲的
-  - 长
+  - jvm的生命周期
 ---
 
 # JVM的生命周期
-
-## 标题 2
-
-这里是内容。
-
-### 标题 3
-
-这里是内容。
+## JVM的生命周期
+一个运行时的java虚拟机实例的天职就是运行一个java程序。
+1. JVM实例的诞生   
+        当一个程序启动，伴随的就是一个jvm实例的诞生，当这个程序关闭退出，这个jvm实例就随之消亡。如果在同一台机器上运行多个程序，将诞生相应数量的jvm实例，每个程序都有一个与之对应的jvm实例供其运行。任何一个拥有公开的（public）、静态的（static）、没有返回值（void）并且接受一个字符串数组参数（String[] args） 的main()函数的class都可以作为JVM实例运行的起点 。
+1. JVM实例的运行  
+         `main()`作为该程序初始线程的起点，任何其他线程均由该线程启动。JVM内部有两种线程：`守护线程`和`非守护线程`，`main()`属于`非守护线程`，`守护线程`通常由JVM自己使用，java程序也可以标明自己创建的线程是守护线程。java程序的初始线程只就是运行main（）的线程，这个线程是非守护线程，只要还有任何非守护线程还在运行，那么jvm就存活着。
+1. JVM实例的消亡  
+      当程序中的所有`非守护线程`都`终止`时，JVM才退出；若安全管理器允许，程序也可以使用java.lang.Runtime类或者java.lang.System.exit()来退出。
