--- a/src/zh/posts/面试求职/JVM/2.md
+++ b/src/zh/posts/面试求职/JVM/2.md
@@ -13,9 +13,10 @@ star: 9
 
 # JVM组成
 ## 1，什么是程序计数器               
-线程私有的，每个线程一份，内部保存的是字节码的行号。
-用于记录正在执行的字节码指令的地址。
-1. `字节码解释器`通过改变`程序计数器`来依次读取指令，然后实现代码的流程控制，如：顺序执行、选择、循环、异常处理。
+程序计数器（ProgramCounterRegister）也叫PC寄存器。
+程序计数器是线程私有的，每个线程一份，每个线程会通过程序计数器记录当前要执行的字节码指令的`地址`。
+在加载阶段，虚拟机将字节码文件中的指令读取到内存之后，会将原文件中的偏移量转换成内存地址。每一条字节码指令都会拥有一个内存地址。
+1. `字节码解释器`通过`程序计数器`来依次读取指令，然后实现代码的流程控制，如：顺序执行、选择、循环、异常处理。
 2. 在多线程的情况下，`程序计数器`用于记录当前线程执行的位置，从而当线程被切换回来的时候能够知道该线程上次运行到哪儿了。
 >打印堆栈大小，局部变量的数量和方法的参数：
 >javap -v xx.class 
