--- a/src/zh/posts/面试求职/JVM/5.md
+++ b/src/zh/posts/面试求职/JVM/5.md
@@ -28,6 +28,6 @@ sticky: true
 总结：线程是进程划分成的更小的运行单位。线程和进程最大的不同在于基本上各个进程是相互独立的，而各个线程不一定，因为同一进程中的线程极有可能相互影响。线程开销小，但不利于资源的管理和保护，而进程正相反。
 ## 程序计数器作用?
 程序计数器主要有下面两个作用：
-1. `字节码解释器`通过改变`程序计数器来`依次读取指令，从而实现代码的流程控制，如：顺序执行、选择、循环、异常处理。
+1. `字节码解释器`通过`程序计数器来`依次读取指令，从而实现代码的流程控制，如：顺序执行、选择、循环、异常处理。
 2. 在多线程的情况下，`程序计数器`用于记录当前线程执行的位置，从而当线程被切换回来的时候能够知道该线程上次运行到哪儿了。
 >需要注意的是，如果执行的是 native 方法，那么程序计数器记录的是 undefined 地址，只有执行的是 Java 代码时程序计数器记录的才是下一条指令的地址。
