--- a/src/zh/posts/JVM/1.md
+++ b/src/zh/posts/JVM/1.md
@@ -10,7 +10,7 @@ tag:
 star: true
 ---
 
-# 类加载器的核心源码
+## 类加载器的核心源码
 
 `loadClass()`方法是类加载的入口，提供了双亲委派机制，它会检查类是否被加载，以及交给父类加载或者交给启动类加载此类，如果都失败，则执行自己的加载方法，主要是调用findClass方法
 ```java
