--- a/src/zh/posts/JVM/2.md
+++ b/src/zh/posts/JVM/2.md
@@ -1,7 +1,7 @@
 ---
 title: "类加载"
 icon: pen-to-square
-date: 2024-11-29
+date: 2025-01-02
 sticky: true
 category:
   - JVM
@@ -9,6 +9,8 @@ tag:
   - 类加载
 star: true
 ---
+jvm定义，功能，字节码的组成，类的声明周期，类加载器，双亲委派机制。
+
 <!-- more -->
 
 ## JVM
